; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_dissociate_bin_slab.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_dissociate_bin_slab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@bin_infos = common dso_local global %struct.TYPE_8__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_7__*)* @arena_dissociate_bin_slab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arena_dissociate_bin_slab(i32* %0, i32* %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp eq i32* %9, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  br label %37

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @extent_szind_get(i32* %18)
  store i64 %19, i64* %7, align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** @bin_infos, align 8
  %21 = load i64, i64* %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i64 %21
  store %struct.TYPE_8__* %22, %struct.TYPE_8__** %8, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp eq i32 %25, 1
  br i1 %26, label %27, label %32

27:                                               ; preds = %17
  %28 = load i32*, i32** %4, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @arena_bin_slabs_full_remove(i32* %28, %struct.TYPE_7__* %29, i32* %30)
  br label %36

32:                                               ; preds = %17
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = call i32 @arena_bin_slabs_nonfull_remove(%struct.TYPE_7__* %33, i32* %34)
  br label %36

36:                                               ; preds = %32, %27
  br label %37

37:                                               ; preds = %36, %14
  ret void
}

declare dso_local i64 @extent_szind_get(i32*) #1

declare dso_local i32 @arena_bin_slabs_full_remove(i32*, %struct.TYPE_7__*, i32*) #1

declare dso_local i32 @arena_bin_slabs_nonfull_remove(%struct.TYPE_7__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
